Comp: Version Control - Cameron James Merged the Version Branch with Trunk.  This has the version control changes included.